# mailbox-system

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  entries.c  entries.h  mailbox  mailbox.c  mailbox.h  main.c  message.c  message.h  pthreadExample.c  testStudent  try_mailbox
include/: entries.h  mailbox.h  message.h  test.h
src/: entries.c  mailbox.c  main.c  message.c  test.c  try_mailbox.c
