cmake_minimum_required (VERSION 2.6)
project (mailbox C)
set(CMAKE_C_FLAGS "-isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk")
set(CMAKE_C_FLAGS ${CMAKE_CXX_FLAGS} "-pthread")
set(CMAKE_BUILD_TYPE Debug)
include_directories(include)
add_executable(mailbox src/main.c src/mailbox.c src/entries.c src/message.c)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(mailbox pthread)